# HealthBar

./: CMakeLists.txt  HealthBar.h  HealthBarAPI.cpp  HealthBarAPI.h  HealthBar_Unix.cpp  HealthBar_Win.cpp  Utils.cpp  Utils.h  library.h  main.cpp
api_test/: CMakeLists.txt  tests.cpp
src/: CMakeLists.txt  HealthBar.cpp  HealthBar.h  HealthBarAPI.cpp  HealthBar_Unix.cpp  HealthBar_Win.cpp  HealthBar_version.h.in  Utils.cpp  libHealthBar.pc.in
src/include/: HealthBarAPI.h
test/: CMakeLists.txt  main.cpp  tests.cpp
